# alma

./: .gitignore  LICENSE  README.md  eval_in_container.py  requirements.txt  run_main.py  testing.sh  training.sh
envs_docker/BALROG/: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  SECRETS  eval.py  image_build.sh  pyproject.toml  setup.py
envs_docker/BALROG/balrog/: client.py  dataset.py  evaluator.py  utils.py
envs_docker/BALROG/balrog/agents/: __init__.py  base.py  chain_of_thought.py  custom.py  dummy.py  few_shot.py  naive.py  robust_cot.py  robust_naive.py
envs_docker/BALROG/balrog/config/: config.yaml
envs_docker/BALROG/balrog/environments/: __init__.py  env_wrapper.py
envs_docker/BALROG/balrog/environments/babaisai/: README.md  __init__.py  babaisai_env.py  base.py
envs_docker/BALROG/balrog/environments/babyai_text/: README.md  __init__.py  babyai_env.py  clean_lang_wrapper.py
envs_docker/BALROG/balrog/environments/crafter/: __init__.py  crafter_env.py  env.py
envs_docker/BALROG/balrog/environments/minihack/: __init__.py  minihack_env.py
envs_docker/BALROG/balrog/prompt_builder/: __init__.py  history.py
envs_docker/BALROG/balrog/scripts/: post_install.py
envs_docker/BALROG/balrog/tests/: test_evaluation.py
envs_docker/BALROG/docker/: Dockerfile  README.md
envs_docker/BALROG/docs/: agents.md  contribution.md  evaluation.md  few_shot_learning.md  installation.md
envs_docker/BALROG/docs/envs/: babaisai.md  babyai.md  crafter.md  minihack.md  nle.md  textworld.md
envs_docker/BALROG/workflows/: CI.yml
(+47 files in other folders)
